deployment/dev/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: gitops-webapp
#   name: gitops-webapp-svc
# spec:
#   type: NodePort
#   ports:
#   - port: 80
#     name: http
#     protocol: TCP
#     targetPort: 8080
#   selector:
#     app: gitops-webapp
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-webapp
  name: gitops-webapp-svc
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: gitops-webapp
