deployment/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitops-webapp
  namespace: argocd
  labels:
    app: gitops-webapp
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: webapp.dev.minikube.local
    http:
      paths:
      - backend:
          serviceName: gitops-webapp-svc
          servicePort: http
